[package]
authors = ["pbzweihander <sd852456@naver.com>"]
name = "ip_manager"
version = "0.9.1"

[dependencies]
config = "0.7.0"
lazy_static = "0.2.9"
reqwest = "0.8.0"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
rocket_contrib = "0.3.3"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
toml = "0.4.5"
error-chain = "0.11.0"
