[package]
authors = ["pbzweihander <sd852456@naver.com>"]
name = "ip_manager"
version = "0.9.2"

[dependencies]
config = "0.7"
error-chain = "0.11"
lazy_static = "0.2"
reqwest = "0.8"
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4"
